packages/bastest/tests/cli/snapshots/typecheck_test__cli_runs_typecheck_before_tests_when_enabled.snap
---
source: tests/cli/typecheck_test.ts
---
status: 1
stdout:
  typecheck tsgo
stderr:
  
  Failed Type Assertions 1
  
  FAIL  sample_test.ts [ sample_test.ts ]
  TypeCheckError: Argument of type 'string | undefined' is not assignable to parameter of type 'string'.
    Expected: string
    Actual:   string | undefined
   > sample_test.ts:5:18
     |
   5 |   assert<string>(value);
     |                  ^
  
  1 type assertion errors
