packages/bastest/tests/cli/snapshots/typecheck_test__cli_typecheck_output_matches_fixture.snap
---
source: tests/cli/typecheck_test.ts
expression: [
    `status: ${result.status}`,
    "stdout:",
    indentBlock(normalizeLog(result.stdout)),
    "stderr:",
    indentBlock(normalizeLog(result.stderr)),
  ].join("\n")
---
status: 1
stdout:
  typecheck tsgo
stderr:
  
  Failed Type Assertions 1
  
  FAIL  typecheck_test.ts [ typecheck_test.ts ]
  TypeCheckError: Argument of type 'string | undefined' is not assignable to parameter of type 'string'.
    Expected: string
    Actual:   string | undefined
   > typecheck_test.ts:5:18
     |
   5 |   assert<string>(value);
     |                  ^
  
  1 type assertion errors
